# a-puzzle-a-day-python

./: .mypy.ini  Makefile  README.md  print.py  pyproject.toml  solve.py  stat.py
a-puzzle-a-day-solutions/: 001-002.json  001-003.json  001-004.json  001-005.json  001-006.json  001-007.json  001-008.json  001-009.json  001-010.json  001-011.json  001-012.json  001-013.json  001-014.json  001-015.json  001-016.json  001-017.json  001-018.json  001-019.json  001-020.json  001-021.json  001-022.json  001-023.json  001-024.json  001-025.json  001-026.json  001-027.json  001-028.json  001-029.json  001-030.json  001-031.json  002-003.json  002-004.json  002-005.json  002-006.json  002-007.json  002-008.json  002-009.json  002-010.json  002-011.json  002-012.json  (+856 more)
